--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h1>Basic Calculator</h1>
         <span id="num1-el"></span>
         <span id="num2-el"></span>
         <br>
